# reversible

./: README.md  pyproject.toml
experiments/cnf/: cnf.py  process_results.py
experiments/cnf/results/dto/: dopri5.txt  midpoint.txt  rk4.txt
experiments/cnf/results/rev/: dopri5.txt  midpoint.txt  rk4.txt
experiments/neural_cde/: cde.py  process_results.py
experiments/neural_cde/data/: load_character_trajectories.py
experiments/neural_cde/results/dto/: dopri5.txt  midpoint.txt  rk4.txt
experiments/neural_cde/results/rev/: dopri5.txt  midpoint.txt  rk4.txt
experiments/regression/: gradient_error.py  memory_usage.py
experiments/regression/plotting/: plot.py
experiments/regression/results/: dto_mem_usage.txt  otd_error.txt  rev_error.txt  rev_mem_usage.txt
experiments/stability/: plot.py
reversible/: cnf_solver.py  example.py  reversible_solver.py  solver_step.py  standard_solver.py
reversible_solvers/: cnf_solver.py  example.py  reversible.py  solver.py  solver_step.py  testing.py  vector_field.py
reversible_solvers/tracking/: memory.py
