[project]
name = "reversible"
authors = [
    {name = "Sam McCallum", email = "sm2942@bath.ac.uk"}
]
version = "0.0.1"
dependencies = ["jax>=0.4.28", "jaxtyping>=0.2.24", "typing_extensions>=4.5.0", "typeguard==2.13.3", "equinox>=0.11.2", "lineax>=0.0.5", "optimistix>=0.0.7", "diffrax>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"